--- a/ocmoni6/html/s7Query.html
+++ b/ocmoni6/html/s7Query.html
@@ -26,7 +26,7 @@
             <div class="panel-heading">
                 <h3 class="panel-title">
                 <span class="checkbox-inline">
-                    <input  id ="a7" type="checkbox"><label for="a7">全选</label>
+                    <input  id ="a7" type="checkbox" name="checkAll"><label for="a7">全选</label>
                 </span>
                     <span class="marginL15">升舱组描述>升舱子组描述>[0BJ]升舱</span>
                 </h3>
@@ -35,11 +35,11 @@
                 <ul class="list-group">
                     <li class="list-group-item s7_list_row">
                         <span class="s7_list_item s7_list_checkbox ">
-                             <input  type="checkbox">
+                             <input  type="checkbox" name="item_checkbox">
                         </span>
                         <span class="productsImg"></span>
                         <span class="s7_list_item s7_list_descr text-info marginL15">
-                            这里是描述信息
+                            这里是描述信息1
                         </span>
                         <span class="s7_list_item s7_list_seq marginLR15">10356</span>
                         <span class="s7_list_item text-primary">2016-05-24—2016-05-25</span>
@@ -54,11 +54,11 @@
 
                     <li class="list-group-item s7_list_row">
                         <span class="s7_list_item s7_list_checkbox ">
-                             <input  type="checkbox">
+                             <input  type="checkbox" name="item_checkbox">
                         </span>
                         <span class="productsImg"></span>
                         <span class="s7_list_item s7_list_descr text-info marginL15">
-                            这里是描述信息
+                            这里是描述信息1
                         </span>
                         <span class="s7_list_item s7_list_seq marginLR15">10356</span>
                         <span class="s7_list_item text-primary">2016-05-24—2016-05-25</span>
@@ -258,7 +258,7 @@
         <div class="panel-heading">
             <h3 class="panel-title">
                 <span class="checkbox-inline">
-                    <input  id ="ax1" type="checkbox"><label for="ax1">全选</label>
+                    <input name ="checkAll" type="checkbox"><label for="ax1">全选</label>
                 </span>
                 <span class="marginL15">升舱组描述>升舱子组描述>[0BJ]升舱</span>
             </h3>
@@ -267,7 +267,7 @@
             <ul class="list-group">
                 <li class="list-group-item s7_list_row">
                     <span class="s7_list_item s7_list_checkbox ">
-                         <input  type="checkbox">
+                         <input  type="checkbox" name="item_checkbox">
                     </span>
                     <span class="s7_list_item productsImg"></span>
                     <span class="s7_list_item s7_list_descr text-info">
@@ -289,7 +289,7 @@
 
                 <li class="list-group-item s7_list_row">
                         <span class="s7_list_item s7_list_checkbox ">
-                             <input  type="checkbox">
+                             <input  type="checkbox" name="item_checkbox">
                         </span>
                     <span class="productsImg"></span>
                         <span class="s7_list_item s7_list_descr text-info marginL15">
