--- a/ocmoni6/html/datasourceEdit.html
+++ b/ocmoni6/html/datasourceEdit.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="../styles/css/jquery.autocomplete.css"/>
     <link rel="stylesheet" href="../styles/css/jquery_ui.datepicker-modify.css"/>
     <link rel="stylesheet" href="../styles/css/jquery-ui-timepicker-addon.css"/>
-    <link rel="stylesheet" href="../styles/css/oc_common.css">
+    <link rel="stylesheet" href="../styles/css/common.css">
     <link rel="stylesheet" href="../styles/css/oc_edit.css">
     <link rel="stylesheet" href="../styles/css/tui_dialog.css"/>
     <link rel="stylesheet" href="../lib/iconfont/iconfont.css"/>
