--- a/ocmoni6/html/mileageExchangeQuery.html
+++ b/ocmoni6/html/mileageExchangeQuery.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="../../bower_components/bootstrap/dist/css/bootstrap.css"/>
     <link rel="stylesheet" href="../styles/css/jquery_ui.datepicker-modify.css"/>
     <link rel="stylesheet" href="../styles/css/jquery-ui-timepicker-addon.css"/>
-    <link rel="stylesheet" href="../styles/css/oc_common.css">
+    <link rel="stylesheet" href="../styles/css/common.css">
     <link rel="stylesheet" href="../styles/css/oc_query.css"/>
 </head>
 <body>
