--- a/brand1/html/index.html
+++ b/brand1/html/index.html
@@ -83,6 +83,11 @@
                 <input type="text" class="common_input" style="width: 100px" placeholder="范围" />
                 <span style="margin: 0 2px;">-</span>
                 <input type="text" class="common_input" style="width: 100px" placeholder="范围" />
+                <span>select测试</span>
+                <select class="common_input" style="width: 120px">
+                    <option>商务名称</option>
+                    <option>子代码</option>
+                </select>
             </div>
     </div>
     <!--query section end-->
