--- a/ocmoni6/html/s7Query.html
+++ b/ocmoni6/html/s7Query.html
@@ -62,49 +62,30 @@
 
     <!--query section start-->
     <div class ="query_section">
-        <form class="form-inline">
             <!--query row1 start-->
             <div class="query_row">
                 <span class="query_title">基础信息</span>
-                <div class="form-group">
-                    <div class="checkbox">
-                        <input id ="c1" type="checkbox"><label for="c1">未发布</label>
-                    </div>
-                    <div class="checkbox">
-                        <input id ="c2" type="checkbox"><label for="c2">已发布</label>
-                    </div>
+                <input id ="c1" type="checkbox"><label for="c1">未发布</label>
+                <input id ="c2" type="checkbox"><label for="c2">已发布</label>
+                <input  id ="c3" type="checkbox"><label for="c3"> 未生效</label>
+                <input  id ="c4" type="checkbox"> <label for="c4">已生效</label>
+                <input  id ="c5" type="checkbox"> <label for="c5">已过期</label>
 
-                    <div class="checkbox">
-                        <input  id ="c3" type="checkbox"><label for="c3"> 未生效</label>
-                    </div>
-                    <div class="checkbox">
-                        <input  id ="c4" type="checkbox"> <label for="c4">已生效</label>
-                    </div>
-                    <div class="checkbox">
-                        <input  id ="c5" type="checkbox"> <label for="c5">已过期</label>
-                    </div>
-                </div>
-                <span class="marginR15"></span>
-                <div class="form-group">
-                    <label  class="marginR5">服务</label>
-                    <select class="form-control">
-                        <option>商务名称</option>
-                        <option>子代码</option>
-                    </select>
-                    <input type="email" class="form-control input-sm" style="width: 100px">
-                </div>
-                <div class="form-group">
-                    <label class="marginR5">销售日期</label>
-                    <input type="text" class="form-control input-sm datepicker"  placeholder="起始日期" style="width: 100px">
-                    <span class="glyphicon glyphicon-th iconfont_box"></span>
-                    <span class="marginL15"></span>
-                    <input type="text" class="form-control input-sm datepicker"  placeholder="结束日期" style="width: 100px">
-                    <span class="glyphicon glyphicon-th iconfont_box"></span>
-                </div>
-
-                <div class="checkbox marginLR15">
-                    <input  id ="showHideMoreQuerySectionBtn" type="checkbox"> <label for="showHideMoreQuerySectionBtn">更多条件</label>
-                </div>
+                <label  class="marginR5">服务</label>
+                <select class="common_input" style="width: 120px">
+                <option>商务名称</option>
+                <option>子代码</option>
+            </select>
+                <input type="email" class="common_input" style="width: 100px">
+                <label class="marginR5">销售日期</label>
+                <input type="text" class="common_input datepicker"  placeholder="起始日期" style="width: 100px">
+                <span class="glyphicon glyphicon-th iconfont_box"></span>
+                <span class="marginL15"></span>
+                <input type="text" class="common_input datepicker"  placeholder="结束日期" style="width: 100px">
+                <span class="glyphicon glyphicon-th iconfont_box"></span>
+                <span class="marginLR15">
+                </span>
+                <input  id ="showHideMoreQuerySectionBtn" type="checkbox"> <label for="showHideMoreQuerySectionBtn">更多条件</label>
                 <button type="button" class="btn btn-sm btn-primary" id="queryBtn">查询</button>
             </div>
             <!--query row1 end-->
@@ -114,65 +95,44 @@
                 <!--query row2 start-->
                 <div class="query_row">
                     <span class="query_title">服务等级&nbsp;|&nbsp;机型</span>
-                    <div class="form-group">
-                        <div class="checkbox">
-                            <input id ="a1" type="checkbox"><label for="a1">豪华头等舱</label>
-                        </div>
-                        <div class="checkbox">
-                            <input id ="a2" type="checkbox"><label for="a2">头等舱</label>
-                        </div>
-
-                        <div class="checkbox">
-                            <input  id ="a3" type="checkbox"><label for="a3"> 豪华商务舱</label>
-                        </div>
-                        <div class="checkbox">
-                            <input  id ="a4" type="checkbox"> <label for="a4">商务舱</label>
-                        </div>
-                        <div class="checkbox">
-                            <input  id ="a5" type="checkbox"> <label for="a5">豪华经济舱</label>
-                        </div>
-                        <div class="checkbox">
-                            <input  id ="a6" type="checkbox"> <label for="a6">经济舱</label>
-                        </div>
-                    </div>
+                    <input id ="a1" type="checkbox"><label for="a1">豪华头等舱</label>
+                    <input id ="a2" type="checkbox"><label for="a2">头等舱</label>
+                    <input  id ="a3" type="checkbox"><label for="a3"> 豪华商务舱</label>
+                    <input  id ="a4" type="checkbox"> <label for="a4">商务舱</label>
+                    <input  id ="a5" type="checkbox"> <label for="a5">豪华经济舱</label>
+                    <input  id ="a6" type="checkbox"> <label for="a6">经济舱</label>
                     <span class="marginR15"></span>
-                    <div class="form-group">
-                        <label   class="marginR5">机型</label>
-                        <select class="form-control">
-                            <option selected>选择</option>
-                            <option>747-B747-400CMB</option>
-                            <option>73G-B737-700</option>
-                            <option>733-B737-3z00</option>
-                            <option>340-A340-300</option>
-                            <option>319-A319-111</option>
-                        </select>
-                    </div>
-                    <div class="form-group">
-                        <label class="marginR5">优先级序号</label>
-                        <input type="text" class="form-control input-sm"  style="width: 100px">
-                    </div>
+
+                    <label   class="marginR5">机型</label>
+                    <select class="common_input">
+                        <option selected>选择</option>
+                        <option>747-B747-400CMB</option>
+                        <option>73G-B737-700</option>
+                        <option>733-B737-3z00</option>
+                        <option>340-A340-300</option>
+                        <option>319-A319-111</option>
+                    </select>
+                    
+                    <label class="marginR5">优先级序号</label>
+                    <input type="text" class="common_input"  style="width: 100px">
                 </div>
                 <!--query row2 end-->
                 <!--query row3 start-->
                 <div class="query_row">
                     <span class="query_title">地理位置</span>
-                    <div class="form-group">
-                        <label   class="marginR5">区域1</label>
-                        <input type="text" class="form-control input-sm"  style="width: 100px">
-                    </div>
-                    <div class="form-group">
-                        <label class="marginR5">区域2</label>
-                        <input type="text" class="form-control input-sm"  style="width: 100px">
-                    </div>
-                    <div class="form-group">
-                        <label class="marginR5">经过区域</label>
-                        <input type="text" class="form-control input-sm"  style="width: 100px">
-                    </div>
+
+                    <label   class="marginR5">区域1</label>
+                    <input type="text" class="common_input"  style="width: 100px">
+
+                    <label class="marginR5">区域2</label>
+                    <input type="text" class="common_input"  style="width: 100px">
+
+                    <label class="marginR5">经过区域</label>
+                    <input type="text" class="common_input"  style="width: 100px">
                 </div>
                 <!--query row3 end-->
             </div>
             <!--moreQuerySection end-->
-        </form>
     </div>
     <!--query section end-->
 </div>
