--- a/ocmoni6/html/validate.html
+++ b/ocmoni6/html/validate.html
@@ -43,12 +43,14 @@
     </nav>
     <!--query section start-->
     <div class ="query_section">
-        <span class="query_title">已发布运价验证</span>
-        <span class="pull-right marginR15" style="padding-top: 2px">
-            <button type="button" id ="backBtn" class="btn btn-sm btn-default">返回</button>
-            <button type="button" id ="cleanBtn" class="btn btn-warning btn-sm">清空</button>
-            <button type="button" id ="vaildateBtn" class="btn btn-success btn-sm">验证请求</button>
-        </span>
+        <div class="query_row">
+            <span class="query_title">已发布运价验证</span>
+            <span class="pull-right marginR15" >
+                <button type="button" id ="backBtn" class="btn btn-sm btn-default">返回</button>
+                <button type="button" id ="cleanBtn" class="btn btn-warning btn-sm">清空</button>
+                <button type="button" id ="vaildateBtn" class="btn btn-success btn-sm">验证请求</button>
+            </span>
+        </div>
     </div>
     <!--query section end-->
 </div>
