--- a/ocmoni6/html/datasourceQuery.html
+++ b/ocmoni6/html/datasourceQuery.html
@@ -185,8 +185,10 @@
                     <td>2015-11-13</td>
                     <td>2015-11-28</td>
                     <td>ATPCO数据</td>
-                    <td>
-                        <i class="glyphicon glyphicon-pencil myhand "></i>
+                    <td class="oper_item">
+                        <a title="修改编辑" href ="<%=tag_ctx%>/abr/toAbrDatasourceUpdate.action?id=1234567>">
+                            <i class="glyphicon glyphicon-pencil myhand "></i>
+                        </a>
                         <i class="glyphicon glyphicon-trash myhand marginL5"></i>
                     </td>
                 </tr>
