--- a/brand1/html/index.html
+++ b/brand1/html/index.html
@@ -8,14 +8,6 @@
     <link rel="stylesheet" href="../styles/css/jquery-ui-timepicker-addon.css"/>
     <link rel="stylesheet" href="../styles/css/common.css">
     <link rel="stylesheet" href="../styles/css/brand_query.css"/>
-    <style>
-        .main_content{
-            padding-top: 150px;
-        }
-        .query_row{
-
-        }
-    </style>
 </head>
 <body>
 
@@ -36,18 +28,7 @@
             <!-- Collect the nav links, forms, and other content for toggling -->
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-9">
                 <ul class="nav navbar-nav">
-                    <li class="active"><a href="#">附加服务</a></li>
-                    <li role="presentation" class="dropdown">
-                        <a id="drop4" href="javascript:void(0)" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">
-                            基础数据<span class="caret"></span>
-                        </a>
-                        <ul id="menu1" class="dropdown-menu" aria-labelledby="drop4">
-                            <li><a href="#">数据源</a></li>
-                            <li role="separator" class="divider"></li>
-                            <li><a href="#">里程积分兑换</a></li>
-                        </ul>
-                    </li>
-                    <li><a href="#">运价校验</a></li>
+                    <li class="active"><a href="#">品牌服务</a></li>
                 </ul>
             </div><!-- /.navbar-collapse -->
         </div><!-- /.container-fluid -->
@@ -102,6 +83,8 @@
 
 <script type="text/javascript" src="../../bower_components/jquery/dist/jquery.js"></script>
 <script type="text/javascript" src="../../bower_components/bootstrap/dist/js/bootstrap.js"></script>
+<script type="text/javascript" src="../../bower_components/headroom.js/dist/headroom.js"></script>
+<script type="text/javascript" src="../../bower_components/headroom.js/dist/jQuery.headroom.js"></script>
 <script type="text/javascript" src="../js/index.js"></script>
 </body>
 </html>
