main_content的pading都改为body的padding，oc项目中还没有修改，下周修改

--- a/brand1/html/index.html
+++ b/brand1/html/index.html
@@ -8,6 +8,11 @@
     <link rel="stylesheet" href="../styles/css/jquery-ui-timepicker-addon.css"/>
     <link rel="stylesheet" href="../styles/css/common.css">
     <link rel="stylesheet" href="../styles/css/brand_query.css"/>
+    <style>
+        body{
+            padding-top: 140px;
+        }
+    </style>
 </head>
 <body>
 
@@ -75,10 +80,15 @@
 </div>
 
 
+<div class="container-fluid main_content">
 
-<div id="test">
+    hello world
 
 </div>
+
+
+
+
 
 
 <script type="text/javascript" src="../../bower_components/jquery/dist/jquery.js"></script>
