--- a/ocmoni6/html/datasourceQuery.html
+++ b/ocmoni6/html/datasourceQuery.html
@@ -9,8 +9,8 @@
     <link rel="stylesheet" href="../styles/css/common.css">
     <link rel="stylesheet" href="../styles/css/oc_query.css"/>
     <style>
-        .main_content{
-            padding-top: 150px;
+        body{
+            padding-top: 140px;
         }
     </style>
 </head>
