--- a/brand1/html/index.html
+++ b/brand1/html/index.html
@@ -11,7 +11,7 @@
     <style>
         body{
             padding-top: 140px;
-            min-width: 1200px;
+            /*min-width: 1200px;*/
         }
     </style>
 </head>
@@ -91,26 +91,36 @@
     <div class="panel panel-default brand_list">
         <div class="panel-heading">
             <div class="panel-title">
-                <div class="brand_title">
-                    <span class="title_left text-info">
-                        <input name ="checkAll" type="checkbox">
-                        <i class="glyphicon glyphicon-download marginL10"></i>
-                        asgui_ca test
-                        <i class="glyphicon glyphicon-info-sign text-info pull-right"></i>
-                    </span>
-                    <span class="title_content">
-                       <span>序列号：8776559</span>
-                       <span class="marginL10">城市对：<span class="bold">1 → 2</span></span>
-                       <span class="marginL10">生效日期对：<span class="bold">2016-06-30 — 9999-12-31</span></span>
-                       <span class="marginL10">旅行日期对：<span class="bold">2016-06-30 — 9999-12-31</span></span>
-                       <span class="marginL10">发布对象：状态：<span class="text-danger">未发布</span></span>
-                    </span>
-                    <span class="title_right"><i class="glyphicon glyphicon-pencil marginR10"></i><i class="glyphicon glyphicon-plus"></i></span>
+                <div class="panel-title">
+                    <div class="brand_title">
+                        <span class="left text-info">
+                            <input name ="checkAll" type="checkbox">
+                            <i class="glyphicon glyphicon-download marginL10" ></i>
+                            asgui_ca test
+                            <i class="glyphicon glyphicon-info-sign pull-right descr"></i>
+                        </span>
+                        <span class="right">
+                            <i class="glyphicon glyphicon-pencil marginR10 myhand"></i>
+                            <i class="glyphicon glyphicon-plus text-success myhand"></i></span>
+                        <span class="center">
+                           <span>序列号：8776559</span>
+                           <span class="marginL10">城市对：<span class="bold">1 → 2</span></span>
+                           <span class="marginL10">生效日期对：<span class="bold">2016-06-30 — 9999-12-31</span></span>
+                           <span class="marginL10">旅行日期对：<span class="bold">2016-06-30 — 9999-12-31</span></span>
+                           <span class="marginL10">发布对象：状态：<span class="text-danger">未发布</span></span>
+                        </span>
+                    </div>
                 </div>
             </div>
         </div>
         <div class="panel-body">
-
+            <ul>
+                <li>1</li>
+                <li>2</li>
+                <li>3</li>
+                <li>4</li>
+                <li>5</li>
+            </ul>
         </div>
     </div>
 </div>
