--- a/brand1/html/index.html
+++ b/brand1/html/index.html
@@ -88,7 +88,8 @@
         <button class="btn btn-danger btn-sm">删除</button>
     </div>
     <span class="clearfix"></span>
-    <div class="panel panel-default brand_list">
+
+    <div class="panel panel-default">
         <div class="panel-heading">
             <div class="panel-title">
                 <div class="panel-title">
@@ -113,13 +114,80 @@
                 </div>
             </div>
         </div>
-        <div class="panel-body">
+        <div class="panel-body brand_group">
             <ul>
-                <li>1</li>
-                <li>2</li>
-                <li>3</li>
-                <li>4</li>
-                <li>5</li>
+                <li class="brand_list">
+                    <div class="brand_list_item item1">
+                        1
+                    </div>
+                    <div class="brand_list_item">
+                       <span class="brand_img brand_img_ca"></span>
+                    </div>
+                    <div class="brand_list_item">
+                        <p class="brand_name">xx001</p>
+                        <p>层级序号：10011</p>
+                        <p>测试一下啊这里的描述信息</p>
+                    </div>
+                    <div class="brand_list_item pull-right">
+                        <p><i class="glyphicon glyphicon-search myhand"></i></p>
+                        <p><i class="glyphicon glyphicon-pencil myhand"></i></p>
+                        <p><i class="glyphicon glyphicon-trash myhand"></i></p>
+                    </div>
+                </li>
+                <li class="brand_list">
+                    <div class="brand_list_item item1">
+                        2
+                    </div>
+                    <div class="brand_list_item">
+                        <span class="brand_img brand_img_ca"></span>
+                    </div>
+                    <div class="brand_list_item">
+                        <p class="brand_name">xx001</p>
+                        <p>层级序号：10011</p>
+                        <p>测试一下啊这里的描述信息</p>
+                    </div>
+                    <div class="brand_list_item pull-right">
+                        <p><i class="glyphicon glyphicon-search myhand"></i></p>
+                        <p><i class="glyphicon glyphicon-pencil myhand"></i></p>
+                        <p><i class="glyphicon glyphicon-trash myhand"></i></p>
+                    </div>
+                </li>
+                <li class="brand_list">
+                    <div class="brand_list_item item1">
+                        3
+                    </div>
+                    <div class="brand_list_item">
+                        <span class="brand_img brand_img_ca"></span>
+                    </div>
+                    <div class="brand_list_item">
+                        <p class="brand_name">xx001</p>
+                        <p>层级序号：10011</p>
+                        <p>测试一下啊这里的描述信息</p>
+                    </div>
+                    <div class="brand_list_item pull-right">
+                        <p><i class="glyphicon glyphicon-search myhand"></i></p>
+                        <p><i class="glyphicon glyphicon-pencil myhand"></i></p>
+                        <p><i class="glyphicon glyphicon-trash myhand"></i></p>
+                    </div>
+                </li>
+                <li class="brand_list">
+                    <div class="brand_list_item item1">
+                        4
+                    </div>
+                    <div class="brand_list_item">
+                        <span class="brand_img brand_img_ca"></span>
+                    </div>
+                    <div class="brand_list_item">
+                        <p class="brand_name">xx001</p>
+                        <p>层级序号：10011</p>
+                        <p>测试一下啊这里的描述信息</p>
+                    </div>
+                    <div class="brand_list_item pull-right">
+                        <p><i class="glyphicon glyphicon-search myhand"></i></p>
+                        <p><i class="glyphicon glyphicon-pencil myhand"></i></p>
+                        <p><i class="glyphicon glyphicon-trash myhand"></i></p>
+                    </div>
+                </li>
             </ul>
         </div>
     </div>
