brand查询页面整理

--- a/brand1/html/index.html
+++ b/brand1/html/index.html
@@ -89,14 +89,14 @@
     </div>
     <span class="clearfix"></span>
 
-    <div class="panel panel-default">
+    <div class="panel panel-default brand_group">
         <div class="panel-heading">
             <div class="panel-title">
                 <div class="panel-title">
                     <div class="brand_title">
                         <span class="left text-info">
                             <input name ="checkAll" type="checkbox">
-                            <i class="glyphicon glyphicon-download marginL10" ></i>
+                            <i class="glyphicon glyphicon-upload marginL10" data-name="showHideBody"></i>
                             asgui_ca test
                             <i class="glyphicon glyphicon-info-sign pull-right descr"></i>
                         </span>
@@ -114,7 +114,7 @@
                 </div>
             </div>
         </div>
-        <div class="panel-body brand_group">
+        <div class="panel-body">
             <ul>
                 <li class="brand_list">
                     <div class="brand_list_item item1">
@@ -191,6 +191,112 @@
             </ul>
         </div>
     </div>
+
+
+
+    <div class="panel panel-default brand_group">
+        <div class="panel-heading">
+            <div class="panel-title">
+                <div class="panel-title">
+                    <div class="brand_title">
+                        <span class="left text-info">
+                            <input name ="checkAll" type="checkbox">
+                            <i class="glyphicon glyphicon-upload marginL10" data-name="showHideBody"></i>
+                            asgui_ca test
+                            <i class="glyphicon glyphicon-info-sign pull-right descr"></i>
+                        </span>
+                        <span class="right">
+                            <i class="glyphicon glyphicon-pencil marginR10 myhand"></i>
+                            <i class="glyphicon glyphicon-plus text-success myhand"></i></span>
+                        <span class="center">
+                           <span>序列号：8776559</span>
+                           <span class="marginL10">城市对：<span class="bold">1 → 2</span></span>
+                           <span class="marginL10">生效日期对：<span class="bold">2016-06-30 — 9999-12-31</span></span>
+                           <span class="marginL10">旅行日期对：<span class="bold">2016-06-30 — 9999-12-31</span></span>
+                           <span class="marginL10">发布对象：状态：<span class="text-danger">未发布</span></span>
+                        </span>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="panel-body">
+            <ul>
+                <li class="brand_list">
+                    <div class="brand_list_item item1">
+                        1
+                    </div>
+                    <div class="brand_list_item">
+                        <span class="brand_img brand_img_ca"></span>
+                    </div>
+                    <div class="brand_list_item">
+                        <p class="brand_name">xx001</p>
+                        <p>层级序号：10011</p>
+                        <p>测试一下啊这里的描述信息</p>
+                    </div>
+                    <div class="brand_list_item pull-right">
+                        <p><i class="glyphicon glyphicon-search myhand"></i></p>
+                        <p><i class="glyphicon glyphicon-pencil myhand"></i></p>
+                        <p><i class="glyphicon glyphicon-trash myhand"></i></p>
+                    </div>
+                </li>
+                <li class="brand_list">
+                    <div class="brand_list_item item1">
+                        2
+                    </div>
+                    <div class="brand_list_item">
+                        <span class="brand_img brand_img_ca"></span>
+                    </div>
+                    <div class="brand_list_item">
+                        <p class="brand_name">xx001</p>
+                        <p>层级序号：10011</p>
+                        <p>测试一下啊这里的描述信息</p>
+                    </div>
+                    <div class="brand_list_item pull-right">
+                        <p><i class="glyphicon glyphicon-search myhand"></i></p>
+                        <p><i class="glyphicon glyphicon-pencil myhand"></i></p>
+                        <p><i class="glyphicon glyphicon-trash myhand"></i></p>
+                    </div>
+                </li>
+                <li class="brand_list">
+                    <div class="brand_list_item item1">
+                        3
+                    </div>
+                    <div class="brand_list_item">
+                        <span class="brand_img brand_img_ca"></span>
+                    </div>
+                    <div class="brand_list_item">
+                        <p class="brand_name">xx001</p>
+                        <p>层级序号：10011</p>
+                        <p>测试一下啊这里的描述信息</p>
+                    </div>
+                    <div class="brand_list_item pull-right">
+                        <p><i class="glyphicon glyphicon-search myhand"></i></p>
+                        <p><i class="glyphicon glyphicon-pencil myhand"></i></p>
+                        <p><i class="glyphicon glyphicon-trash myhand"></i></p>
+                    </div>
+                </li>
+                <li class="brand_list">
+                    <div class="brand_list_item item1">
+                        4
+                    </div>
+                    <div class="brand_list_item">
+                        <span class="brand_img brand_img_ca"></span>
+                    </div>
+                    <div class="brand_list_item">
+                        <p class="brand_name">xx001</p>
+                        <p>层级序号：10011</p>
+                        <p>测试一下啊这里的描述信息</p>
+                    </div>
+                    <div class="brand_list_item pull-right">
+                        <p><i class="glyphicon glyphicon-search myhand"></i></p>
+                        <p><i class="glyphicon glyphicon-pencil myhand"></i></p>
+                        <p><i class="glyphicon glyphicon-trash myhand"></i></p>
+                    </div>
+                </li>
+            </ul>
+        </div>
+    </div>
+
 </div>
 
 <script type="text/javascript" src="../../bower_components/jquery/dist/jquery.js"></script>
