--- a/brand1/html/index.html
+++ b/brand1/html/index.html
@@ -204,7 +204,7 @@
                             <i class="glyphicon glyphicon-upload marginL10" data-name="showHideBody"></i>
                             asgui_ca test
                             <i class="glyphicon glyphicon-info-sign pull-right descrImg" data-toggle="tooltip"
-                               data-placement="top"  title="Tooltip on top  hello world  这里是描述信息"></i>
+                               data-placement="top"  title="描述信息为空"></i>
                         </span>
                         <span class="right">
                             <i class="glyphicon glyphicon-pencil marginR10 myhand"></i>
