--- a/ocmoni6/html/s7Query.html
+++ b/ocmoni6/html/s7Query.html
@@ -28,18 +28,18 @@
             <!-- Collect the nav links, forms, and other content for toggling -->
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-9">
                 <ul class="nav navbar-nav">
-                    <li class="active"><a href="#">附加服务</a></li>
+                    <li class="active"><a href="s7Query.html">附加服务</a></li>
                     <li role="presentation" class="dropdown">
                         <a id="drop4" href="javascript:void(0)" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">
                             基础数据<span class="caret"></span>
                         </a>
                         <ul id="menu1" class="dropdown-menu" aria-labelledby="drop4">
-                            <li><a href="#">数据源</a></li>
+                            <li><a href="datasourceQuery.html">数据源</a></li>
                             <li role="separator" class="divider"></li>
-                            <li><a href="#">里程积分兑换</a></li>
+                            <li><a href="mileageExchangeQuery.html">里程积分兑换</a></li>
                         </ul>
                     </li>
-                    <li><a href="#">运价校验</a></li>
+                    <li><a href="validate.html">运价校验</a></li>
                 </ul>
             </div><!-- /.navbar-collapse -->
         </div><!-- /.container-fluid -->
@@ -124,7 +124,7 @@
 
 <div class="container-fluid main_content" id="main_content" >
     <div class="pull-right clearfix" style="margin-bottom: 8px">
-        <button class="btn btn-success btn-sm">新建</button>
+        <button class="btn btn-success btn-sm" onclick="toAddUI()">新建</button>
         <button class="btn btn-default btn-sm">复制</button>
         <button class="btn btn-default btn-sm">发布</button>
         <button class="btn btn-default btn-sm">截止</button>
