--- a/ocmoni6/html/datasourceEdit.html
+++ b/ocmoni6/html/datasourceEdit.html
@@ -32,23 +32,32 @@
             <!-- Collect the nav links, forms, and other content for toggling -->
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-9">
                 <ul class="nav navbar-nav">
-                    <li ><a href="#">附加服务</a></li>
-                    <li class="active"><a href="#">数据源配置</a></li>
-                    <li><a href="#">里程积分兑换</a></li>
-                    <li><a href="#">运价校验</a></li>
-                    <li><a href="#">批量导入</a></li>
+                    <li><a href="s7Query.html">附加服务</a></li>
+                    <li role="presentation" class="dropdown active">
+                        <a id="drop4" href="javascript:void(0)" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">
+                            基础数据<span class="caret"></span>
+                        </a>
+                        <ul id="menu1" class="dropdown-menu" aria-labelledby="drop4">
+                            <li><a href="datasourceQuery.html">数据源</a></li>
+                            <li role="separator" class="divider"></li>
+                            <li><a href="mileageExchangeQuery.html">里程积分兑换</a></li>
+                        </ul>
+                    </li>
+                    <li><a href="validate.html">运价校验</a></li>
                 </ul>
             </div><!-- /.navbar-collapse -->
         </div><!-- /.container-fluid -->
     </nav>
     <!--query section start-->
     <div class ="query_section">
-        <span class="query_title">新建数据源配置</span>
-        <span> 配置项</span>
-        <span class="pull-right marginR15" style="padding-top: 2px">
-            <button type="button" id ="back" class="btn btn-sm btn-default">返回</button>
-            <button type="button" id ="saveBtn" class="btn btn-success btn-sm">保存</button>
-        </span>
+        <div class="query_row">
+            <span class="query_title">新建数据源配置</span>
+            <span> 配置项</span>
+            <span class="pull-right marginR15">
+                <button type="button" id ="back" class="btn btn-sm btn-default">返回</button>
+                <button type="button" id ="saveBtn" class="btn btn-success btn-sm">保存</button>
+            </span>
+        </div>
     </div>
     <!--query section end-->
 </div>
@@ -168,6 +177,7 @@
 </div>
 
 <script type="text/javascript" src="../../bower_components/jquery/dist/jquery.js"></script>
+<script type="text/javascript" src="../../bower_components/bootstrap/dist/js/bootstrap.min.js"></script>
 <script type="text/javascript" src="../lib/jq-datepicker/jquery_ui.js"></script>
 <script type="text/javascript" src="../lib/jq-datepicker/jquery_ui.datepicker-zh-CN.js"></script>
 <script type="text/javascript" src="../lib/jq-timepicker/jquery-timepicker-addon.js"></script>
