--- a/ocmoni6/html/s7Edit.html
+++ b/ocmoni6/html/s7Edit.html
@@ -32,25 +32,34 @@
             <!-- Collect the nav links, forms, and other content for toggling -->
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-9">
                 <ul class="nav navbar-nav">
-                    <li class="active"><a href="#">附加服务</a></li>
-                    <li><a href="#">数据源配置</a></li>
-                    <li><a href="#">里程积分兑换</a></li>
-                    <li><a href="#">运价校验</a></li>
-                    <li><a href="#">批量导入</a></li>
+                    <li class="active"><a href="s7Query.html">附加服务</a></li>
+                    <li role="presentation" class="dropdown">
+                        <a id="drop4" href="javascript:void(0)" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">
+                            基础数据<span class="caret"></span>
+                        </a>
+                        <ul id="menu1" class="dropdown-menu" aria-labelledby="drop4">
+                            <li><a href="datasourceQuery.html">数据源</a></li>
+                            <li role="separator" class="divider"></li>
+                            <li><a href="mileageExchangeQuery.html">里程积分兑换</a></li>
+                        </ul>
+                    </li>
+                    <li><a href="validate.html">运价校验</a></li>
                 </ul>
             </div><!-- /.navbar-collapse -->
         </div><!-- /.container-fluid -->
     </nav>
     <!--query section start-->
     <div class ="query_section">
-        <span class="query_title">新建服务费用</span>
-        <span>服务类型&nbsp;|</span>
-        <span>费用&nbsp;|</span>
-        <span>规则</span>
-        <span class="pull-right marginR15" style="padding-top: 2px">
-            <button type="button" id ="saveBtn" class="btn btn-default btn-sm">保存</button>
-            <button type="button" id ="saveAndPublishBtn" class="btn btn-default btn-sm btn-success">保存并发布</button>
-        </span>
+        <div class="query_row">
+            <span class="query_title">新建服务费用</span>
+            <span>服务类型&nbsp;|</span>
+            <span>费用&nbsp;|</span>
+            <span>规则</span>
+            <span class="pull-right marginR15">
+                <button type="button" id ="saveBtn" class="btn btn-default btn-sm">保存</button>
+                <button type="button" id ="saveAndPublishBtn" class="btn btn-default btn-sm btn-success">保存并发布</button>
+            </span>
+        </div>
     </div>
     <!--query section end-->
 </div>
