--- a/ocmoni6/html/s7Edit.html
+++ b/ocmoni6/html/s7Edit.html
@@ -146,7 +146,7 @@
                            <input type="text" id ="id1"  class="form-control input-sm datetimepicker" id="inputEmail3" placeholder="销售生效日期">
                        </div>
                        <label for="id1" class="glyphicon glyphicon-th iconfont_box"></label>
-                       <span class="input_error_tip">这里是错误提示信息</span>
+                       <span class="errorInfo_validate">这里是错误提示信息22222222222</span>
                    </div>
                     <div class="form-group">
                         <label class="pure-u-1-8 control-label">销售截止日期</label>
@@ -154,7 +154,7 @@
                             <input type="text" id="id2" class="form-control input-sm datetimepicker"  placeholder="销售截止日期" >
                         </div>
                         <label for="id2" class="glyphicon glyphicon-th iconfont_box"></label>
-
+                        <span class="errorInfo_validate">这里是错误提示信息22222222222</span>
                     </div>
                     <div class="form-group">
                         <label class="pure-u-1-8 control-label">服务套数</label>
@@ -164,6 +164,7 @@
                         <div class="pure-u-1-8">
                             <input type="text" class="form-control input-sm"  placeholder="结束套数" >
                         </div>
+                        <span class="errorInfo_validate">这里是错误提示信息22222222222</span>
                     </div>
                     <div class="form-group">
                         <label class="pure-u-1-8 control-label">描述</label>
